# Blog

./: docker-compose.yaml  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_tags.py
blog/templatetags/: blog_tags.py
blog_api/: serializers.py  views.py
mysite/: settings.py  urls.py
templates/blog/post/: list.html
