[tool.poetry]
name = "mysite"
version = "0.1.0"
description = "Stepic"
authors = ["snail <sgefsnkiospch908@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
black = "^25.9.0"
isort = "^6.0.1"
django = "^5.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
